# server/routes/api/index.js
@@ -4,6 +4,7 @@ import userRouter from './users';
 import authRouter from './auth';
 import articleRouter from './articles';
 import profileRoute from './profile';
+import tagsRoute from './tags';
 
 const apiRouter = express.Router();
 
@@ -15,5 +16,6 @@ apiRouter.use('/users', userRouter);
 apiRouter.use('/auth', authRouter);
 apiRouter.use('/articles', articleRouter);
 apiRouter.use('/profiles', profileRoute);
+apiRouter.use('/tags', tagsRoute)
 
 export default apiRouter;
