# server/routes/api/tags.js
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import ArticleController from '@controllers/articles';
+
+const tagRoute = Router();
+
+tagRoute.get('/', ArticleController.getAllTags);
+
+export default tagRoute;
